--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -4,7 +4,8 @@ CONFIG_ZMK_POINTING=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_ZMK_BLE=y
 
-
+CONFIG_BT_CTLR_PHY_2M=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_SPI=y
 CONFIG_INPUT=y
@@ -25,7 +26,7 @@ CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=20
 #CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=
 #CONFIG_PMW3610_REST3_SAMPLE_TIME_MS=
 #CONFIG_PMW3610_REST3_DOWNSHIFT_TIME_MS=
-#CONFIG_PMW3610_FORCE_AWAKE=n
+CONFIG_PMW3610_FORCE_AWAKE=y
 CONFIG_PMW3610_POLLING_RATE_125_SW=y
 CONFIG_PMW3610_AUTOMOUSE_TIMEOUT_MS=700
 
@@ -42,4 +43,3 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n 
-
