--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -10,6 +10,10 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_SPI=y
 CONFIG_INPUT=y
 
+# スクロール加速機能
+CONFIG_PMW3610_SCROLL_ACCELERATION=y
+CONFIG_PMW3610_SCROLL_ACCELERATION_SENSITIVITY=5 #1-10
+
 CONFIG_PMW3610=y
 CONFIG_PMW3610_CPI=600
 # CONFIG_PMW3610_ADJUSTABLE_MOUSESPEED=y
