--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -12,7 +12,8 @@ CONFIG_INPUT=y
 
 # スクロール加速機能
 CONFIG_PMW3610_SCROLL_ACCELERATION=y
-CONFIG_PMW3610_SCROLL_ACCELERATION_SENSITIVITY=5 #1-10
+# 1-10
+CONFIG_PMW3610_SCROLL_ACCELERATION_SENSITIVITY=5
 
 CONFIG_PMW3610=y
 CONFIG_PMW3610_CPI=600
