--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -6,6 +6,8 @@ CONFIG_ZMK_BLE=y
 
 CONFIG_BT_CTLR_PHY_2M=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
 
 CONFIG_SPI=y
 CONFIG_INPUT=y
@@ -35,9 +37,9 @@ CONFIG_PMW3610_MOVEMENT_THRESHOLD=0
 
 
 # スクロール加速機能
-CONFIG_PMW3610_SCROLL_ACCELERATION=y
+# CONFIG_PMW3610_SCROLL_ACCELERATION=y
 # 1-10
-CONFIG_PMW3610_SCROLL_ACCELERATION_SENSITIVITY=5
+# CONFIG_PMW3610_SCROLL_ACCELERATION_SENSITIVITY=5
 
 
 CONFIG_PMW3610_SMART_ALGORITHM=y
