--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -37,9 +37,9 @@ CONFIG_PMW3610_MOVEMENT_THRESHOLD=0
 
 
 # スクロール加速機能
-# CONFIG_PMW3610_SCROLL_ACCELERATION=y
+CONFIG_PMW3610_SCROLL_ACCELERATION=y
 # 1-10
-# CONFIG_PMW3610_SCROLL_ACCELERATION_SENSITIVITY=5
+CONFIG_PMW3610_SCROLL_ACCELERATION_SENSITIVITY=5
 
 
 CONFIG_PMW3610_SMART_ALGORITHM=y
