--- a/config/west.yml
+++ b/config/west.yml
@@ -2,8 +2,8 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: kumamuk-git
-      url-base: https://github.com/kumamuk-git
+    - name: mhourai
+      url-base: https://github.com/mhourai
   projects:
     - name: zmk
       remote: zmkfirmware
