Add prospector module to west configuration

--- a/config/west.yml
+++ b/config/west.yml
@@ -4,6 +4,8 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: mhourai
       url-base: https://github.com/mhourai
+    - name: prospector
+      url-base: https://github.com/mhourai
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -12,5 +14,9 @@ manifest:
     - name: zmk-pmw3610-driver
       remote: mhourai
       revision: main
+    - name: prospector-zmk-module
+      remote: prospector
+      revision: v1.1.1
+      path: modules/prospector-zmk-module
   self:
     path: config
