--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -4,16 +4,21 @@ CONFIG_ZMK_POINTING=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_ZMK_BLE=y
 
-# CONFIG_BT_CTLR_PHY_2M=n
+CONFIG_BT_CTLR_PHY_2M=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
+
+# ペアリング可能なBluetoothデバイスの数を1に設定
+# CONFIG_BT_MAX_PAIRED=2
+# 接続プロファイルの数も1に設定
+# CONFIG_BT_MAX_CONN=2
 
 CONFIG_SPI=y
 CONFIG_INPUT=y
 
 CONFIG_PMW3610=y
-CONFIG_PMW3610_CPI=600
+CONFIG_PMW3610_CPI=400
 # CONFIG_PMW3610_ADJUSTABLE_MOUSESPEED=y
 CONFIG_PMW3610_CPI_DIVIDOR=1
 CONFIG_PMW3610_ORIENTATION_0=y
@@ -29,7 +34,7 @@ CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=20
 #CONFIG_PMW3610_REST2_DOWNSHIFT_TIME_MS=
 #CONFIG_PMW3610_REST3_SAMPLE_TIME_MS=
 #CONFIG_PMW3610_REST3_DOWNSHIFT_TIME_MS=
-CONFIG_PMW3610_FORCE_AWAKE=y
+CONFIG_PMW3610_FORCE_AWAKE=n
 CONFIG_PMW3610_POLLING_RATE_125_SW=y
 CONFIG_PMW3610_AUTOMOUSE_TIMEOUT_MS=100000
 
@@ -60,3 +65,17 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 # ADD eager debboucing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=3
+
+# Prospector Scanner
+CONFIG_ZMK_STATUS_ADVERTISEMENT=y
+CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="Robaish-BL"  # Display name
+
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_BASED=y
+CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=200
+CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=10000
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=120000
+
+CONFIG_PROSPECTOR_MAX_LAYERS=7
