--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -18,7 +18,7 @@ CONFIG_SPI=y
 CONFIG_INPUT=y
 
 CONFIG_PMW3610=y
-CONFIG_PMW3610_CPI=800
+CONFIG_PMW3610_CPI=600
 # CONFIG_PMW3610_ADJUSTABLE_MOUSESPEED=y
 CONFIG_PMW3610_CPI_DIVIDOR=1
 CONFIG_PMW3610_ORIENTATION_180=y  #normal
@@ -46,6 +46,15 @@ CONFIG_PMW3610_MOVEMENT_THRESHOLD=2
 CONFIG_PMW3610_SCROLL_ACCELERATION=y
 # 1-10
 CONFIG_PMW3610_SCROLL_ACCELERATION_SENSITIVITY=5
+
+# ポインティングデバイス加速度を有効化
+CONFIG_ZMK_POINTING_ACCEL=y
+# 加速度の倍率（大きいほど速くなる）
+CONFIG_ZMK_POINTING_ACCEL_FACTOR=2.0
+# 加速度が効き始める速度（カウント/秒）
+CONFIG_ZMK_POINTING_ACCEL_START=10
+# 最大加速度倍率
+CONFIG_ZMK_POINTING_ACCEL_MAX=4.0
 
 
 CONFIG_PMW3610_SMART_ALGORITHM=y
