--- a/config/west.yml
+++ b/config/west.yml
@@ -18,5 +18,8 @@ manifest:
       remote: prospector
       revision: v1.1.1
       path: modules/prospector-zmk-module
+    - name: zmk-scroll-snap
+      remote: mhourai
+      revision: v1
   self:
     path: config
