--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -1,3 +1,4 @@
+
 CONFIG_ZMK_KEYBOARD_NAME="roBaish"
 
 CONFIG_ZMK_POINTING=y
@@ -71,10 +72,12 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=3
 CONFIG_ZMK_STATUS_ADVERTISEMENT=y
 CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="Robaish-BL"  # Display name
 
-# Power optimization (10Hz active, 0.03Hz idle)
-CONFIG_ZMK_STATUS_ADV_ACTIVITY_BASED=y
-CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=100
-CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=30000
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
 
-# Split keyboard battery monitoring (if applicable)
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_BASED=y
+CONFIG_ZMK_STATUS_ADV_ACTIVE_INTERVAL_MS=200
+CONFIG_ZMK_STATUS_ADV_IDLE_INTERVAL_MS=10000
+CONFIG_ZMK_STATUS_ADV_ACTIVITY_TIMEOUT_MS=120000
+
+CONFIG_PROSPECTOR_MAX_LAYERS=7
