Update keyboard name and advertisement display name

--- a/config/boards/shields/Test/roBa_R.conf
+++ b/config/boards/shields/Test/roBa_R.conf
@@ -1,5 +1,5 @@
 
-CONFIG_ZMK_KEYBOARD_NAME="roBaish"
+CONFIG_ZMK_KEYBOARD_NAME="roBaish-White"
 
 CONFIG_ZMK_POINTING=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
@@ -70,7 +70,7 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=3
 
 # Prospector Scanner
 CONFIG_ZMK_STATUS_ADVERTISEMENT=y
-CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="Robaish-BL"  # Display name
+CONFIG_ZMK_STATUS_ADV_KEYBOARD_NAME="Robaish-WH"  # Display name
 
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
